<resources>
    <string name="app_name">spothub</string>
    <string name="auth_email_input_hint">Email</string>
    <string name="auth_passwd_input_hint">Password</string>
    <string name="auth_confirm_passwd_input_hint">Confirm password</string>
    <string name="auth_sign_in_btn">SIGN IN</string>
    <string name="auth_sign_in_hint">First time? Register</string>
    <string name="auth_sign_in_hint_here">HERE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_sign_up_btn">SIGN UP</string>
    <string name="auth_sign_up_hint">Already has an account? Login</string>
    <string name="add_post_latitude">Latitude</string>
    <string name="add_post_longitude">Longitude</string>
    <string name="add_post_title">Title</string>
    <string name="add_post_desc">Description...</string>
    <string name="side_nav_preferences">Preferences</string>
    <string name="side_nav_logout">Logout</string>
    <string name="setting_dark_theme_title">Dark Theme</string>
    <string name="setting_dark_theme_summary">Enable dark theme</string>
    <string name="setting_language_title">Language</string>
    <string name="setting_language_summary">Select your preferred language</string>
    <string name="map_locating_confirm">Confirm</string>
    <string name="profile_edit_username">Username</string>
    <string name="profile_edit_desc">About you...</string>
    <string name="edit_post_confirm">Save</string>
    <string name="add_post_open_gallery">Open gallery</string>
    <string name="add_post_context_menu_take_photo">Take photo</string>
    <string name="add_post_context_menu_open_gallery">Open gallery</string>
    <string name="add_post_clear_all">Clear all</string>
    <string name="post_follow_btn">FOLLOW</string>
    <string name="item_post_following">Following</string>
    <string name="user_detail_unfollow">Unfollow</string>

</resources>