<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment">


    <ImageView
        android:id="@+id/imageView"
        style="@style/AuthBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        style="@style/AuthLogo"
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/mail_fill_edit_text_icon"
            android:drawablePadding="10dp"
            android:textColor="@color/primary_txt"
            android:hint="@string/auth_email_input_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/secondary_txt" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_txt"
            android:background="@drawable/custom_edit_text"
            android:drawableStart="@drawable/lock_fill_edit_text_icon"
            android:drawablePadding="10dp"
            android:hint="@string/auth_passwd_input_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/secondary_txt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/sfpro_display_bold"
            android:paddingHorizontal="30dp"
            android:text="@string/auth_sign_in_btn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:textFontWeight="800"
                android:layout_width="wrap_content"
                android:textColor="@color/primary_txt"
                android:layout_height="wrap_content"
                android:text="@string/auth_sign_in_hint"
                app:layout_constraintTop_toBottomOf="@+id/signIn" />

            <TextView
                android:id="@+id/clickHere"
                android:textStyle="bold"
                android:textColor="@color/primary_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="@string/auth_sign_in_hint_here"
                app:layout_constraintTop_toBottomOf="@+id/signIn" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>